--- a/urlshortener/package.json
+++ b/urlshortener/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "validator": "^13.5.2",
