--- a/react-builds/package.json
+++ b/react-builds/package.json
@@ -18,8 +18,10 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/validator": "^13.1.3",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "js-file-download": "^0.4.12",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
